# pythonningcore

./: README.md  package.py  pyproject.toml
pythonningcore/: c.py
pythonningcore/contexting/: __init__.py  platforming.py
pythonningcore/datastructuring/: __init__.py  c.py  dicting.py  preferencing.py
pythonningcore/datastructuring/tests/: test_entity.py  test_preferencing.py
pythonningcore/datastructuring/tests/data/: pref-test-1.json
pythonningcore/generating/: __init__.py  identifying.py
pythonningcore/highorder/: c.py  lru.py
pythonningcore/highordering/: c.py
pythonningcore/loggering/: __init__.py
pythonningcore/pathing/: __init__.py  c.py
pythonningcore/pathing/tests/: test.py
pythonningcore/pathing/tests/data/src/alpha/myDir/: unittest.lua
pythonningcore/pathing/tests/data/src/beta/: read-only.md
pythonningcore/py23/: __init__.py  helpers.py
pythonningcore/py23/enum/: __init__.py
pythonningcore/stringing/: __init__.py
pythonningcore/stringing/tests/: test.py
pythonningcore/subprocessing/: __init__.py  c.py
